--- a/demo/sample.less
+++ b/demo/sample.less
@@ -1,5 +1,5 @@
 // Usage
-@import "@{themes}/tidal-wave.less";
+@import '@{themes}/tidal-wave.less';
 @plugin "my-plugin";
 
 // Variables
@@ -36,12 +36,12 @@ a:hover {
 }
 
 // Variables
-@images: "../img";
+@images: '../img';
 
 // Usage
 body {
   color: #444;
-  background: url("@{images}/white-sand.png");
+  background: url('@{images}/white-sand.png');
 }
 
 @property: color;
@@ -71,14 +71,14 @@ a {
 
 .button {
   &-ok {
-    background-image: url("ok.png");
+    background-image: url('ok.png');
   }
   &-cancel {
-    background-image: url("cancel.png");
+    background-image: url('cancel.png');
   }
 
   &-custom {
-    background-image: url("custom.png");
+    background-image: url('custom.png');
   }
 }
 
