--- a/demo/_colors.scss
+++ b/demo/_colors.scss
@@ -147,3 +147,12 @@ $syntax-guide: '#41414E';
 $syntax-selection: '#464653';
 $syntax-selection-gutter: '#2F2F3C';
 $syntax-cursor-line: '#46465342';
+
+$suno-1: #d6e9ff;
+$suno-2: #88b4e7;
+$suno-3: #5d8cc0;
+$suno-4: #586f89;
+$suno-5: #444c55;
+$sduo-1: #34febb;
+$sduo-2: #32ae85;
+$sduo-3: #42675a;
